# hpc

./: README.md  launch-vtune_no_omp.sh  launch-vtune_omp.sh
docs/: README.md  (+1 more)
src/: .clang-format  .gitignore  CMakeLists.txt  README.md  launch-advisor.sh  launch-advisor_no_omp.sh  main.cpp  slau_gradient.cpp  slau_gradient.hh  slau_gradient_orig.cpp  slau_gradient_orig.hh
src/advisor_no_omp/: advisor_no_omp.advixeproj
src/advisor_no_omp/e000/: callstacks.def  e000.advixeexp  loop_hashes.def  settings.xml
src/advisor_no_omp/e000/hs003/: hs003.advixe  issues.xml  metrics.advisum  recommendations.advisum  threading.advisum  vectorization.advisum
src/advisor_no_omp/e000/hs003/config/: collection.cfg  context_values.cfg  runss.options
src/advisor_no_omp/e000/hs003/data.0/: 12400-12412.0-12412.0.th  12400-12412.0-12412.0.th.aux  12400-12412.0.trace  systemcollector-12400-d.bulgakov.sc
src/advisor_no_omp/e000/mp000/: mp000.advixe
src/advisor_no_omp/e000/mp000/config/: collection.cfg  context_values.cfg  runtc.options
src/advisor_no_omp/e000/mp000/data.0/: .tc.lck  advixe-runtc.txt  src_no_omp.pdr.db3
src/advisor_no_omp/e000/trc000/: trc000.advixe
src/advisor_no_omp/e000/trc000/config/: collection.cfg  context_values.cfg  runtrc.options
src/advisor_omp/: advisor_omp.advixeproj
src/advisor_omp/e000/: callstacks.def  e000.advixeexp  loop_hashes.def  roofline.data  roofline_int.data  settings.xml
src/advisor_omp/e000/hs002/: hs002.advixe  issues.xml  metrics.advisum  threading.advisum  vectorization.advisum
src/advisor_omp/e000/trc000/: trc000.advixe
(+45 files in other folders)
